# algos

bfs/: CMakeLists.txt  main.cpp
bfs/randomInput/: input.txt
dfs/: CMakeLists.txt  main.cpp
dijkstra/: main.cpp
heap/: CMakeLists.txt  heap.cpp  heap.h  main.cpp  test.cpp
inversions/: main.cpp
nodes/: node.cpp  node.h
quicksort/: CMakeLists.txt  main.cpp  quicksort.cpp  quicksort.h  test.cpp
quiz/yandex/1/: main.cpp
randomInput/: main.cpp  read.cpp
